# computer_vision_common_tools

./: DraggablePoint.py  Draggablecuboid.py  README.md  feature_detection.py
RGBD视频序列与位姿变换/: camera_poses.txt  pointcloud_filename.txt  rgb_depth_filename.txt
RGBD视频序列与位姿变换/rgb/: 1.tsborder  1.xlsx  10.tsborder  10.xlsx  11.tsborder  11.xlsx  11_ellipse_bottom_center.mat  11_ellipse_top_center.mat  124.xlsx  151.tsborder  151.xlsx  33.tsborder  33.xlsx  image1.tsborder  image10_Meridian_points.mat  image10_ellipse_bottom_center.mat  image10_ellipse_bottom_center_xy.mat  image10_ellipse_top_center.mat  image10_ellipse_top_center_xy.mat  image10_model.stl  image10_xxx.mat  image10_yyy.mat  image124.tsborder  image124_Meridian_points.mat  image124_ellipse_bottom_center.mat  image124_ellipse_bottom_center_xy.mat  image124_ellipse_top_center.mat  image124_ellipse_top_center_xy.mat  image124_model.stl  image124_xxx.mat  image124_yyy.mat  image151_Meridian_points.mat  image151_ellipse_bottom_center.mat  image151_ellipse_bottom_center_xy.mat  image151_ellipse_top_center.mat  image151_ellipse_top_center_xy.mat  image151_model.stl  image151_xxx.mat  image151_yyy.mat  image1_Meridian_points.mat  (+15 more)
RGBD视频序列与位姿变换/src/: CMakeLists.txt  alignclouds_use_camera_pose.cpp  rgbd_sequence2pointclouds.cpp
zed/: note.md
zed/python/: zed-opencv.py  zed-opencv_cyy.py
彩色图+深度图+相机内参生成点云/: generate_pointcloud.py
